# Run via create_apps_ios.sh or create_apps_android.sh
appId: ${APP_ID}
name: "Create some apps (DB seed)"
---

- launchApp:
    clearState: true # Clears the local storage, DB

# Take first screenshot when DB is empty
- takeScreenshot:
    path: screenshots/${MAESTRO_LANG}/1_welcome

# -----------------------------------------------------------------------------
# Create apps
# -----------------------------------------------------------------------------

# Create app Flutter Tips
- runFlow:
    file: create_app.yaml
    env:
        APP_NAME: "Flutter Tips"
# Create app Pixel Picker
- runFlow:
    file: create_app.yaml
    env:
        APP_NAME: "Pixel Picker"
# Create app Habit Tracker
# - runFlow:
#     file: create_app.yaml
#     env:
#         APP_NAME: "Habit Tracker"
# # Create app Flutter Ship
# - runFlow:
#     file: create_app.yaml
#     env:
#         APP_NAME: "Flutter Ship"

# -----------------------------------------------------------------------------
# Complete some tasks for Flutter Tips app
# -----------------------------------------------------------------------------
- tapOn:
    id: "app-0"
    label: "Select app #1"
# Epic 1 (App Icons)
- tapOn:
    id: "epic-0"
    label: "Select epic #1"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn:
    id: "task-4"
    label: "Toggle task #5"
- tapOn: "Back"
# Epic 2 (Flutter Flavors)
- tapOn:
    id: "epic-1"
    label: "Select epic #2"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn:
    id: "task-4"
    label: "Toggle task #5"
- tapOn:
    id: "task-5"
    label: "Toggle task #6"
- tapOn: "Back"
# Epic 3 (Error Monitoring)
- tapOn:
    id: "epic-2"
    label: "Select epic #3"
- tapOn:
    id: "epic-1"
    label: "Select epic #2"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn:
    id: "task-4"
    label: "Toggle task #5"
- tapOn:
    id: "task-5"
    label: "Toggle task #6"
- tapOn:
    id: "task-6"
    label: "Toggle task #7"
- tapOn:
    id: "task-7"
    label: "Toggle task #8"
- tapOn:
    id: "task-8"
    label: "Toggle task #9"
- tapOn: "Back"
# Epic 4 (Analytics)
- tapOn:
    id: "epic-3"
    label: "Select epic #4"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn:
    id: "task-4"
    label: "Toggle task #5"
- tapOn:
    id: "task-5"
    label: "Toggle task #6"
- tapOn:
    id: "task-6"
    label: "Toggle task #7"
- tapOn:
    id: "task-7"
    label: "Toggle task #8"
- tapOn: "Back"
# Epic 5 (Force Update)
- tapOn:
    id: "epic-4"
    label: "Select epic #5"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn: "Back"
# Epic 7 (In App Review Prompt)
- tapOn:
    id: "epic-6"
    label: "Select epic #7"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn: "Back"
# Epic 8 (Website)
- tapOn:
    id: "epic-7"
    label: "Select epic #8"
- tapOn:
    id: "task-0"
    label: "Toggle task #1"
- tapOn:
    id: "task-1"
    label: "Toggle task #2"
- tapOn:
    id: "task-2"
    label: "Toggle task #3"
- tapOn:
    id: "task-3"
    label: "Toggle task #4"
- tapOn:
    id: "task-4"
    label: "Toggle task #5"
- tapOn:
    id: "task-5"
    label: "Toggle task #6"    
- tapOn: "Back"
- tapOn: "Back"